# vagrant

./: .gitconfig  .gitignore  CHANGES.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TODO.md  commit.sh  config.toml
p/: ALL.json  ALL.txt
p/7zip/: config
p/abseil-cpp/: config  versions.json  versions.txt
p/acl/: versions.json  versions.txt
p/alacritty/: versions.json  versions.txt
p/alsa-lib/: config  versions.json  versions.txt
p/alsa-plugins/: config
p/alsa-ucm-conf/: config  versions.json  versions.txt
p/alsa-utils/: config  versions.json  versions.txt
p/ani-cli/: config
p/appstream/: config  versions.json  versions.txt
p/appstream-glib/: config
p/apr/: config  versions.json  versions.txt
p/apr-util/: config  versions.json  versions.txt
p/aquamarine/: config  versions.json  versions.txt
p/aspell/: versions.json  versions.txt
p/at-spi2-core/: config  versions.json  versions.txt
p/autoconf/: config  versions.json  versions.txt
p/avahi/: versions.json  versions.txt
p/awww/: config  versions.json  versions.txt
p/bash-completion/: config  versions.json  versions.txt
p/bc/: config  versions.json  versions.txt
p/bdwgc/: versions.json  versions.txt
p/befunge-93/: config  versions.json  versions.txt
p/bind-utils/: versions.json  versions.txt
p/binutils/: config
p/boost/: config  versions.json  versions.txt
p/bottom/: config  versions.json  versions.txt
p/brightnessctl/: config
p/brotli/: config
p/bspwm/: config
p/btop/: config  versions.json  (+1 more)
sh/: dev-utils.env  lib.env  m
src/: config.rs  main.rs
(+1620 files in other folders)
