[package]
name = "vat"
version = "2.8.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
humantime = "2.2"
indexmap = "2.11"
num_cpus = "1"
rand = "0.9"
rayon = "1.11"
regex = "1.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wait-timeout = "0.2.1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = 9 }
suspicious = { level = "deny", priority = 8 }
complexity = { level = "deny", priority = 7 }
perf = { level = "deny", priority = 6 }
nursery = { level = "deny", priority = 2 }
unwrap_used = { level = "deny" }

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = false
panic = "abort"
incremental = false
